[package]
name = "advent_of_code"
version = "0.9.2"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
derive_more = "0.99.17"
indicatif = "0.17.7"
itertools = "0.12.0"
num = "0.4.1"
pico-args = "0.5.0"
